# huffman-rs

./: Cargo.toml  README.md
src/: compression.rs  freqs.rs  huffman.rs  main.rs
