[package]
name = "greedy-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.6"
serde = { version = "1.0", features = ["derive"] }
bit-vec = { version = "0.6", features = ["serde"] }
rmp-serde = "1.1.1"
