[package]
name = "huffman-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = { version = "0.6", features = ["serde"] }
rayon = "1.6"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1.1"
clap = { version = "4.1.6", features = ["derive"] }
